# edsm-dumps-model

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  config.toml
.github/workflows/: build.yml
.hooks/: apply.sh  pre-commit  pre-push
dumps/: Makefile
sampled_json/: powerPlay.json  systemWithCoordinates.json
schemas/: systemsPopulated.json.txt
src/: array_decoder.rs  config.rs  download.rs  err.rs  lib.rs  main.rs  model.rs  schema.rs  target.rs
src/array_decoder/: file.rs  parallel.rs
src/model/: bgs.rs  body.rs  dec.rs  powerplay.rs  station.rs  system.rs  system_populated.rs  util.rs
src/model/dec/: date_format.rs  date_format_opt.rs
src/schema/: criteria.rs  types.rs
tests/: parse_body.rs  parse_dumps.rs  parse_samples.rs  parse_test.rs
tests/sample_json/: body.json  powerPlay.json  station.json  systemWithoutCoordinates.json
