[package]
name = "edsm-dumps-model"
version = "0.9.1"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

description = "Data models for EDSM dump data"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = []
readme = "README.md"
repository = "https://github.com/IgaguriMK/edsm-dumps-model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
type_hash = ["dep:type_hash"]

[dependencies]
anyhow = "1.0.94"
chrono = {version = "0.4.39", features = ["serde"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
strum = {version = "0.26.3", features = ["derive"]}
type_hash = { version = "0.3.0", optional = true }
variant_count = "1.1.0"
